<resources>
    <string name="app_name">InventoryApp</string>

    <!-- catalog activity -->
    <string name="action_insert_dummy_data">Insert Dummy Data</string>
    <string name="action_delete_all_entries">Delete All Shoes</string>

    <string name="empty_view_title_text">It\'s a bit empty here&#8230;</string>
    <string name="empty_view_subtitle_text">Get started by adding products</string>

    <string name="unknown_type">Unknown type</string>

    <!-- editor activity -->
    <string name="editor_activity_title_new_product">Add a Product</string>
    <string name="editor_activity_title_edit_product">Edit Product</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>

    <string name="category_overview">Overview</string>
    <string name="category_price">Price</string>
    <string name="category_quantity">Quantity</string>
    <string name="category_supplier_name">Supplier Name</string>
    <string name="category_supplier_phone_number">Supplier Phone Number</string>

    <string name="hint_product_brand">Brand</string>
    <string name="hint_product_type">Type</string>
    <string name="hint_product_price">Price</string>
    <string name="hint_product_quantity">Quantity</string>
    <string name="hint_product_supplier_name">Supplier Name</string>
    <string name="hint_product_supplier_phone_number">Supplier Phone Number</string>

    <string name="unit_product_price">PLN</string>

    <string name="editor_insert_product_failed">Error with saving product</string>
    <string name="editor_insert_product_successful">Product saved</string>
    <string name="editor_update_product_failed">Error with updating pet</string>
    <string name="editor_update_product_successful">Product updated</string>

    <string name="unsaved_changes_dialog_msg">Error with updating product</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep editing</string>

    <string name="valid_product_brand">Oops, you forgot about brand</string>
    <string name="valid_product_type">Oops, you forgot about type</string>
    <string name="valid_product_price">Oops, you forgot about price</string>
    <string name="valid_product_quantity">Oops, you forgot about quantity</string>
    <string name="valid_product_supplier_info">Oops, you forgot about supplier infos</string>

    <string name="editor_delete_product_successful">Product deleted</string>
    <string name="editor_delete_product_failed">Error with deleting product</string>
    <string name="delete_dialog_msg">Delete this product?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>

    <string name="editor_decrement_product">Call supplier, no items left!</string>

    <string name="additional_actions_text">Additional actions</string>
    <string name="change_quantity_text">Change quantity</string>
    <string name="or_text">or</string>
    <string name="increment">+1</string>
    <string name="decrement">-1</string>
    <string name="call_supplier_text">Call supplier</string>
    <string name="call_text">Call</string>

    <!-- list_item activity -->
    <string name="sell_text">Sell</string>
    <string name="price_text">Price:</string>
    <string name="quantity_text">Quantity:</string>

</resources>
