<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/common_margin_and_padding"
    tools:context=".EditorActivity">

    <!-- Overview container - contains fields: Product Name and Type -->
    <LinearLayout
        android:id="@+id/container_overview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/label_overview"
            android:text="@string/category_overview"
            style="@style/CategoryStyle"/>

        <LinearLayout
            style="@style/InnerLinearVerticalContainer">

            <EditText
                android:id="@+id/edit_product_brand"
                android:hint="@string/hint_product_brand"
                android:inputType="textCapWords"
                style="@style/EditTextFieldStyle"/>

            <EditText
                android:id="@+id/edit_product_type"
                android:hint="@string/hint_product_type"
                android:inputType="textCapWords"
                style="@style/EditTextFieldStyle"/>

        </LinearLayout>

    </LinearLayout>

    <!-- Price container -->
    <LinearLayout
        android:id="@+id/container_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/label_price"
            android:text="@string/category_price"
            style="@style/CategoryStyle" />

        <RelativeLayout
            style="@style/InnerRelativeContainer">

            <EditText
                android:id="@+id/edit_product_price"
                android:hint="@string/hint_product_price"
                android:inputType="number"
                style="@style/EditTextFieldStyle" />

            <TextView
                android:id="@+id/label_price_units"
                android:text="@string/unit_product_price"
                style="@style/EditorUnitsStyle"/>

        </RelativeLayout>

    </LinearLayout>

    <!-- Quantity container -->
    <LinearLayout
        android:id="@+id/container_quantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/label_quantity"
            android:text="@string/category_quantity"
            style="@style/CategoryStyle" />

        <LinearLayout
            style="@style/InnerLinearHorizontalContainer">

            <EditText
                android:id="@+id/edit_product_quantity"
                android:hint="@string/hint_product_quantity"
                android:inputType="number"
                style="@style/EditTextFieldStyle"/>

        </LinearLayout>

    </LinearLayout>

    <!-- Supplier Name container -->
    <LinearLayout
        android:id="@+id/container_supplier_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/label_supplier_name"
            android:text="@string/category_supplier_name"
            style="@style/CategoryStyle" />

        <LinearLayout
            style="@style/InnerLinearHorizontalContainer">

            <EditText
                android:id="@+id/edit_product_supplier_name"
                android:hint="@string/hint_product_supplier_name"
                android:inputType="textCapWords"
                style="@style/EditTextFieldStyle"/>

        </LinearLayout>

    </LinearLayout>

    <!-- Supplier Name container -->
    <LinearLayout
        android:id="@+id/container_supplier_phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/label_supplier_phone_number"
            android:text="@string/category_supplier_phone_number"
            style="@style/CategoryStyle" />

        <LinearLayout
            style="@style/InnerLinearHorizontalContainer">

            <EditText
                android:id="@+id/edit_product_supplier_phone_number"
                android:hint="@string/hint_product_supplier_phone_number"
                android:inputType="phone"
                style="@style/EditTextFieldStyle"/>

        </LinearLayout>

    </LinearLayout>

    <!-- Divider line -->
    <View
        android:id="@+id/horizontal_divider_line"
        style="@style/HorizontalDividerLine"/>

    <!-- Additional actions -->
    <TextView
        android:id="@+id/additional_actions_text"
        android:text="@string/additional_actions_text"
        style="@style/AdditionalInfoLabel"/>

    <LinearLayout
        android:id="@+id/change_quantity_action"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="@dimen/common_margin_and_padding">

        <TextView
            android:id="@+id/change_quantity_text"
            android:text="@string/change_quantity_text"
            style="@style/AdditionalActionLabel"/>

        <Button
            android:id="@+id/decrement_button"
            android:text="@string/decrement"
            style="@style/ChangeQuantityButton"/>

        <TextView
            android:id="@+id/one_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/or_text"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/increment_button"
            android:text="@string/increment"
            style="@style/ChangeQuantityButton"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/call_supplier_action"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="@dimen/common_margin_and_padding">

        <TextView
            android:id="@+id/call_supplier_text"
            android:text="@string/call_supplier_text"
            style="@style/AdditionalActionLabel"/>

        <Button
            android:id="@+id/call_button"
            android:text="@string/call_text"
            style="@style/CallButton"/>

    </LinearLayout>

</LinearLayout>